--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -195,7 +195,7 @@ a{
     width: 100%;
     height: 100vh;
     min-height: 100%;
-    background: url("../img/header/header_bg.jpg") no-repeat;
+    background: url("../img/Header/header_bg.jpg") no-repeat;
     -webkit-background-size: cover;
          -o-background-size: cover;
             background-size: cover;
